apps/devops-app/base/vap-bind-required-env-label.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: required-env-label
spec:
  policyName: required-env-label
  validationActions: [Deny]
  # matchResources:
  #   namespaceSelector:
  #     matchLabels:
  #       kubernetes.io/metadata.name: devops-app
