apps/devops-app/base/vap-required-env-label.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: required-env-label
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["*"]
      apiVersions: ["*"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["*"]
  validations:
    - expression: |
        has(object.metadata.labels) &&
        'app.kubernetes.io/name' in object.metadata.labels &&
        'env' in object.metadata.labels &&
        object.metadata.labels['env'] in ['dev', 'stage', 'prod']
      message: "The 'env' and 'app.kubernetes.io/name' labels must be set. 'env' label must have one of the following values: 'dev', 'stage', or 'prod'."
